--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>vCard QR Code Generator</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.3/build/qrcode.min.js"></script>
+    <script src="https://unpkg.com/qrcode@1.5.3/build/qrcode.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -218,5 +218,14 @@
     </div>
 
     <script src="app.js"></script>
+    <script>
+console.log('QRCode available:', typeof QRCode !== 'undefined');
+if (typeof QRCode !== 'undefined') {
+    console.log('QRCode library loaded successfully!');
+} else {
+    console.log('ERROR: QRCode library failed to load!');
+}
+</script>
+
 </body>
 </html>
