Add Essential Meta Tags
The version before this change is working fine (notes for debugging or rolling back to the last-known working version.)

--- a/index.html
+++ b/index.html
@@ -1,6 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <!-- Basic Meta -->
+<meta name="description" content="Create free vCard QR codes for business cards, networking, and sharing your contact instantly.">
+<meta name="keywords" content="vcard qr code, business card qr, contact qr code generator, digital business card, free qr code">
+<meta name="author" content="Your Name or Company">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://vcardqrcodegenerator.com/">
+<meta property="og:title" content="Free vCard QR Code Generator">
+<meta property="og:description" content="Create professional contact QR codes instantly for your business cards. Free and fast!">
+<meta property="og:image" content="https://vcardqrcodegenerator.com/preview-image.png">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:url" content="https://vcardqrcodegenerator.com/">
+<meta name="twitter:title" content="Free vCard QR Code Generator">
+<meta name="twitter:description" content="Create professional contact QR codes instantly for business cards. Free and fast!">
+<meta name="twitter:image" content="https://vcardqrcodegenerator.com/preview-image.png">
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>vCard QR Code Generator</title>
