Added promo image URL to index.html

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <meta property="og:url" content="https://vcardqrcodegenerator.com/">
 <meta property="og:title" content="Free vCard QR Code Generator">
 <meta property="og:description" content="Create professional contact QR codes instantly for your business cards. Free and fast!">
-<meta property="og:image" content="https://vcardqrcodegenerator.com/preview-image.png">
+<meta property="og:image" content="https://vcardqrcodegenerator.com/vcard-qr-generator-promo.png">
 
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:url" content="https://vcardqrcodegenerator.com/">
 <meta name="twitter:title" content="Free vCard QR Code Generator">
 <meta name="twitter:description" content="Create professional contact QR codes instantly for business cards. Free and fast!">
-<meta name="twitter:image" content="https://vcardqrcodegenerator.com/preview-image.png">
+<meta name="twitter:image" content="https://vcardqrcodegenerator.com/vcard-qr-generator-promo.png">
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
