Update author name meta tag

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- Basic Meta -->
 <meta name="description" content="Create free vCard QR codes for business cards, networking, and sharing your contact instantly.">
 <meta name="keywords" content="vcard qr code, business card qr, contact qr code generator, digital business card, free qr code">
-<meta name="author" content="Your Name or Company">
+<meta name="author" content="vCard QR code generator">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
