Add JSON-LD Structured Data
Apparently this is for SEO

--- a/index.html
+++ b/index.html
@@ -87,6 +87,26 @@
         .success { background: #d4edda; color: #155724; }
         .error { background: #f8d7da; color: #721c24; }
     </style>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebApplication",
+  "name": "vCard QR Code Generator",
+  "url": "https://vcardqrcodegenerator.com",
+  "description": "Create professional contact QR codes instantly for business cards. Free and fast!",
+  "applicationCategory": "BusinessApplication",
+  "operatingSystem": "Web Browser",
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "USD"
+  },
+  "author": {
+    "@type": "Person",
+    "name": "Abilash Kumar"
+  }
+}
+</script>
 </head>
 <body>
     <div class="container">
