--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-E90B41BNEH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-E90B41BNEH');
+</script>
     <!-- Your excellent SEO and Meta Tags -->
     <meta name="description" content="Create free vCard QR codes for business cards, networking, and sharing your contact instantly.">
     <meta name="keywords" content="vcard qr code, business card qr, contact qr code generator, digital business card, free qr code">
