Add canonical tag and JSON-LD structured data

--- a/index.html
+++ b/index.html
@@ -10,6 +10,27 @@
 
   gtag('config', 'G-E90B41BNEH');
 </script>
+    <link rel="canonical" href="https://vcardqrcodegenerator.com/" />
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "SoftwareApplication",
+  "name": "vCard QR Code Generator",
+  "url": "https://vcardqrcodegenerator.com/",
+  "applicationCategory": "Utility",
+  "operatingSystem": "All",
+  "description": "Free vCard QR code generator for creating contact QR codes instantly.",
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "USD"
+  },
+  "author": {
+    "@type": "Person",
+    "name": "Abilash K B"
+  }
+}
+</script>
     <!-- Your excellent SEO and Meta Tags -->
     <meta name="description" content="Create free vCard QR codes for business cards, networking, and sharing your contact instantly.">
     <meta name="keywords" content="vcard qr code, business card qr, contact qr code generator, digital business card, free qr code">
