--- a/index.html
+++ b/index.html
@@ -99,6 +99,18 @@
                         <button id="shareBtn" class="hidden w-full px-4 py-2 border border-gray-300 dark:border-gray-600 text-base font-medium rounded-md shadow-sm text-gray-700 dark:text-gray-300 bg-white dark:bg-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 transition disabled:opacity-50 disabled:cursor-not-allowed">
                             Share
                         </button>
+                        <a href="how-to-use.html" style="
+                        display: inline-block;
+                        background-color: #324a67;
+                        color: #fff;
+                        padding: 10px 18px;
+                        border-radius: 6px;
+                        text-decoration: none;
+                        font-weight: 600;
+                        margin: 12px 0;
+                        ">
+                          How to Use
+                        </a>
                     </div>
                 </div>
             </div>
