Rectified website placeholder format
The previous version had the markdown syntax for the website field which is now changed

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ END:VCARD`;
                 document.getElementById('fullName').value = 'Jane Appleseed';
                 document.getElementById('phone').value = '+18006927753';
                 document.getElementById('email').value = 'jane.appleseed@example.com';
-                document.getElementById('website').value = '[https://www.apple.com](https://www.apple.com)';
+                document.getElementById('website').value = 'https://www.apple.com';
                 document.getElementById('company').value = 'Apple Inc.';
                 document.getElementById('title').value = 'Creative Director';
                 generateQRCode();
