Added nav buttons for privacy policy and contact

--- a/index.html
+++ b/index.html
@@ -120,6 +120,10 @@
             </div>
         </div>
     </div>
+<nav>
+  <a href="privacy-policy.html">Privacy Policy</a> |
+  <a href="contact.html">Contact</a>
+</nav>
 
     <!-- Confirmation Modal -->
     <div id="confirmModal" class="hidden fixed inset-0 z-50 flex items-center justify-center p-4">
