--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
         gap: 30px;
-        margin: 60px 0;
+        margin: 60px auto;
         background: #f8fafc;
         padding: 40px 20px;
       }
