chore(blog): remove internal “Why this page” sections from blog posts

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
       <p style="margin-top: 15px;">
         <a href="privacy-policy.html" style="color: #9ca3af; text-decoration: none; margin: 0 15px;">Privacy Policy</a>
         <a href="contact.html" style="color: #9ca3af; text-decoration: none; margin: 0 15px;">Contact</a>
-        <a id="footer-how-to-link" href="/blog/vcard-qr-code-generator/" style="color: #9ca3af; text-decoration: none; margin: 0 15px;">How to Use</a>
+        <a id="footer-how-to-link" href="/blog/qr-code-and-vcard-guide/" style="color: #9ca3af; text-decoration: none; margin: 0 15px;">Ultimate vCard QR code guide</a>
       </p>
     </div>
   </div>
