--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         </div>
       </div>
       <div class="mt-8 flex flex-wrap justify-center gap-4">
-        <a href="/blogs/" class="inline-flex items-center px-4 py-2 rounded-md font-semibold bg-indigo-600 text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Blogs</a>
+        <a href="/blogs/" class="relative z-20 inline-flex items-center px-4 py-2 rounded-md font-semibold bg-indigo-600 text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Blogs</a>
       </div>
     </div>
   </div>
