--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,40 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Privacy Policy - vCard QR Code Generator</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      max-width: 800px;
-      margin: 40px auto;
-      padding: 20px;
-      background: #fafafa;
-      color: #333;
-    }
-    h1 {
-      color: #324a67;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy - vCard QR Code Generator</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <style>
+        body { font-family: 'Inter', sans-serif; }
+        .legal-content h2 { font-size: 1.5rem; font-weight: 600; margin-top: 2rem; margin-bottom: 1rem; color: #111827; }
+        .dark .legal-content h2 { color: #fff; }
+        .legal-content p { margin-bottom: 1rem; }
+        .legal-content ul { list-style-type: disc; margin-left: 1.5rem; margin-bottom: 1rem; }
+    </style>
 </head>
-<body>
-  <h1>Privacy Policy</h1>
-  <p>Your privacy is important to us. This policy explains how we collect, use, and protect your personal information.</p>
-  
-  <h2>Information We Collect</h2>
-  <p>We do not collect personal data unless you voluntarily provide it via forms or contact submissions.</p>
-  
-  <h2>Cookies and Tracking</h2>
-  <p>We use minimal cookies for site functionality and analytics to improve user experience.</p>
-  
-  <h2>Use of Information</h2>
-  <p>Any information you provide is used solely to provide and improve our services and to respond to inquiries.</p>
-  
-  <h2>Third-Party Services</h2>
-  <p>We may use third-party services like Google Analytics and Google AdSense, which have their own privacy policies.</p>
-  
-  <h2>Contact Us</h2>
-  <p>If you have questions about this privacy policy, please contact us on the <a href="contact.html">Contact page</a>.</p>
+<body class="bg-gray-50 dark:bg-gray-900 text-gray-800 dark:text-gray-200">
+    <div class="max-w-3xl mx-auto p-4 sm:p-6 lg:p-8">
+        <div class="bg-white dark:bg-gray-800 p-8 rounded-xl shadow-lg border border-gray-200 dark:border-gray-700">
+            <header class="text-center mb-8">
+                <h1 class="text-3xl font-bold text-gray-900 dark:text-white">Privacy Policy</h1>
+                <p class="mt-2 text-gray-600 dark:text-gray-400">Last Updated: October 12, 2025</p>
+            </header>
+
+            <div class="legal-content text-gray-700 dark:text-gray-300">
+                <p>Your privacy is critically important to us. This Privacy Policy outlines how vCard QR Code Generator ("we", "us", or "our") handles your information.</p>
+
+                <h2>1. Data Collection and Usage</h2>
+                <p><strong>vCard Information:</strong> All contact information you enter into the generator (name, phone, email, etc.) is processed exclusively within your web browser. This data is never sent to, stored on, or logged by our servers. Your contact information remains private to you.</p>
+                <p><strong>Analytics:</strong> We use Google Analytics to collect anonymous traffic data to understand how our visitors use the website. This includes information like page views, session duration, and browser type. This data is aggregated and cannot be used to identify you personally.</p>
+
+                <h2>2. Payments</h2>
+                <p>When you purchase a Pro feature, your payment is handled directly by our payment processor, Stripe. We do not collect, see, or store your credit card details. Please refer to Stripe's privacy policy for information on how they handle your payment data.</p>
+
+                <h2>3. Cookies</h2>
+                <p>We use a minimal number of cookies for essential website functionality and for our analytics service (Google Analytics). You can control or delete cookies through your browser settings.</p>
+
+                <h2>4. Third-Party Services</h2>
+                <p>We use Google Analytics for website analytics. This service has its own privacy policy, which we encourage you to review.</p>
+
+                <h2>5. Contact Us</h2>
+                <p>If you have any questions about this Privacy Policy, please contact us at <a href="mailto:contact@vcardqrcodegenerator.com" class="text-blue-600 dark:text-blue-400 hover:underline">contact@vcardqrcodegenerator.com</a>.</p>
+            </div>
+
+            <footer class="text-center mt-12 pt-6 border-t border-gray-200 dark:border-gray-700">
+                <a href="/" class="text-sm text-blue-600 dark:text-blue-400 hover:underline">← Back to Generator</a>
+            </footer>
+        </div>
+    </div>
 </body>
 </html>
