--- a/index.html
+++ b/index.html
@@ -382,10 +382,11 @@
     <div class="container">
       <p>&copy; 2025 vCard QR Code Generator. Made with ❤️ for modern professionals.</p>
       <p style="margin-top: 15px;">
-        <a href="privacy-policy.html" style="color: #9ca3af; text-decoration: none; margin: 0 15px;">Privacy Policy</a>
-        <a href="contact.html" style="color: #9ca3af; text-decoration: none; margin: 0 15px;">Contact</a>
-        <a id="footer-how-to-link" href="https://vcardqrcodegenerator.com/blog/qr-code-and-vcard-guide/" style="color: #9ca3af; text-decoration: none; margin: 0 15px;">Ultimate vCard QR code guide</a>
-      </p>
+        <a href="./privacy-policy.html" style="color: #9ca3af; text-decoration: none; margin: 0 10px;">Privacy Policy</a>
+        <a href="./terms-of-service.html" style="color: #9ca3af; text-decoration: none; margin: 0 10px;">Terms of Service</a>
+        <a href="./contact.html" style="color: #9ca3af; text-decoration: none; margin: 0 10px;">Contact</a>
+        <a href="./vcard-qr-code-guide.html" style="color: #9ca3af; text-decoration: none; margin: 0 10px;">Complete Guide to vCard QR Codes</a>
+    </p>
     </div>
   </div>
   <!-- End Footer Section -->
