Added Pro Feature section

--- a/index.html
+++ b/index.html
@@ -338,6 +338,20 @@
   </div>
   <!-- End Features Section -->
 
+    <!-- Pro Feature CTA Section -->
+<div class="bg-white dark:bg-gray-800">
+    <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-12 text-center">
+        <h2 class="text-3xl font-bold text-gray-900 dark:text-white">Want to Stand Out?</h2>
+        <p class="mt-4 text-lg text-gray-600 dark:text-gray-400 max-w-2xl mx-auto">Add your company logo to your QR code for a professional, branded look that gets noticed.</p>
+        <div class="mt-8">
+            <a href="./logo-qr-code.html" class="inline-block bg-blue-600 text-white text-lg font-semibold py-3 px-8 rounded-lg hover:bg-blue-700 transition">
+                Upgrade to Pro - Add Your Logo
+            </a>
+        </div>
+    </div>
+</div>
+<!-- === END OF Pro Feature CTA Section === -->
+
   <!-- How It Works Section -->
   <div class="how-it-works">
     <div class="container">
