Moved "Upgrade to Pro" section upward

--- a/index.html
+++ b/index.html
@@ -295,12 +295,14 @@
         </div>
       </div>
       
-      <!-- CTA for features (no How to Use buttons) -->
-      <div style="text-align: center; margin-top: 30px;">
-        <a href="#features" class="btn" style="background: #8b5cf6;">✨ See Features</a>
-      </div>
-    </div>
-  </div>
+      <!-- New "Upgrade to Pro" CTA -->
+<div style="text-align: center; margin-top: 40px; padding-top: 30px; border-top: 1px solid #e5e7eb;">
+    <h3 style="font-size: 1.25rem; font-weight: 600; color: #1f2937;">Want to Stand Out?</h3>
+    <p style="margin-top: 0.5rem; color: #6b7280;">Add your company logo for a professional, branded look.</p>
+    <a href="./logo-qr-code.html" class="btn" style="background: #4f46e5; margin-top: 1.5rem;">
+        ✨ Upgrade to Pro - Add Your Logo
+    </a>
+</div>
   <!-- End Main Generator Form -->
 
   <!-- Features Section -->
@@ -337,20 +339,6 @@
     </div>
   </div>
   <!-- End Features Section -->
-
-    <!-- Pro Feature CTA Section -->
-<div class="bg-white dark:bg-gray-800">
-    <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-12 text-center">
-        <h2 class="text-3xl font-bold text-gray-900 dark:text-white">Want to Stand Out?</h2>
-        <p class="mt-4 text-lg text-gray-600 dark:text-gray-400 max-w-2xl mx-auto">Add your company logo to your QR code for a professional, branded look that gets noticed.</p>
-        <div class="mt-8">
-            <a href="./logo-qr-code.html" class="inline-block bg-blue-600 text-white text-lg font-semibold py-3 px-8 rounded-lg hover:bg-blue-700 transition">
-                Upgrade to Pro - Add Your Logo
-            </a>
-        </div>
-    </div>
-</div>
-<!-- === END OF Pro Feature CTA Section === -->
 
   <!-- How It Works Section -->
   <div class="how-it-works">
