seo: canonical sitemap + stronger internal links to priority blog

--- a/blogs/index.html
+++ b/blogs/index.html
@@ -22,6 +22,16 @@
         <p class="text-sm uppercase tracking-[0.3em] text-indigo-200">Blog hub</p>
         <h1 class="text-3xl font-bold leading-tight sm:text-4xl">Explore our latest vCard &amp; QR code resources</h1>
         <p class="max-w-2xl text-indigo-100/90">Stay up to date with networking tactics, QR customization ideas, and contact management workflows powered by our free vCard QR code generator.</p>
+        <div class="flex flex-wrap items-center gap-3 text-sm text-indigo-100">
+          <a href="/" class="inline-flex items-center gap-2 rounded-md border border-indigo-200/40 px-3 py-2 font-medium text-white/90 transition hover:border-white hover:text-white">
+            <span aria-hidden="true">←</span>
+            Launch the generator
+          </a>
+          <a href="https://vcardqrcodegenerator.com/blog/qr-code-and-vcard-guide/" class="inline-flex items-center gap-1 rounded-md bg-white/10 px-3 py-2 font-semibold text-white hover:bg-white/20">
+            Ultimate vCard QR code guide
+            <span aria-hidden="true">→</span>
+          </a>
+        </div>
       </div>
     </div>
   </header>
