Added GA4 tag to pro features button

--- a/logo-qr-code.html
+++ b/logo-qr-code.html
@@ -69,7 +69,7 @@
                         </button>
                         <input type="file" id="logo-upload" class="hidden" accept="image/png, image/jpeg, image/svg+xml">
                         
-                        <a id="download-btn" href="#" download="branded-vcard-qrcode.png" class="hidden w-full text-center px-4 py-2 border border-gray-300 dark:border-gray-600 text-base font-medium rounded-md text-gray-700 dark:text-gray-300 bg-white dark:bg-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
+                        <a id="proFeaturesBtn" href="#" download="branded-vcard-qrcode.png" class="hidden w-full text-center px-4 py-2 border border-gray-300 dark:border-gray-600 text-base font-medium rounded-md text-gray-700 dark:text-gray-300 bg-white dark:bg-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
                             Download Branded QR Code
                         </a>
                     </div>
