Update payment link from PayPal to Dodo

--- a/logo-qr-code.html
+++ b/logo-qr-code.html
@@ -185,7 +185,7 @@ END:VCARD`;
 
     const handlePayment = () => {
         // This will be replaced with your real Stripe/PayPal link
-        window.location.href = 'https://www.paypal.com/ncp/payment/VC7776JW7AMSQ'; 
+        window.location.href = 'https://checkout.dodopayments.com/buy/pdt_ROmfPNXoSRQ16tKgZWURT'; 
     };
 
     const handleLogoUpload = () => {
