Update payment link to include quantity and redirect URL

--- a/logo-qr-code.html
+++ b/logo-qr-code.html
@@ -185,7 +185,7 @@ END:VCARD`;
 
     const handlePayment = () => {
         // This will be replaced with your real Stripe/PayPal link
-        window.location.href = 'https://checkout.dodopayments.com/buy/pdt_ROmfPNXoSRQ16tKgZWURT'; 
+        window.location.href = 'https://checkout.dodopayments.com/buy/pdt_ROmfPNXoSRQ16tKgZWURT?quantity=1&redirect_url=https://vcardqrcodegenerator.com%2Flogo-qr-code.html'; 
     };
 
     const handleLogoUpload = () => {
