--- a/logo-qr-code.html
+++ b/logo-qr-code.html
@@ -23,55 +23,19 @@
 </head>
 <body class="bg-gray-50 dark:bg-gray-900 text-gray-800 dark:text-gray-200">
     <script>
-    (function () {
-      var PURCHASE_URL = 'https://checkout.dodopayments.com/buy/pdt_ROmfPNXoSRQ16tKgZWURT?quantity=1&redirect_url=' + encodeURIComponent('https://vcardqrcodegenerator.com/thank-you.html');
+(function () {
+  // 1) Your two Worker URLs
+  window.__CHECKOUT_API__ = "https://dodo-create-checkout.abhikb2005.workers.dev/";
+  window.__TOKEN_VALIDATOR__ = "https://token-validator.abhikb2005.workers.dev/";
 
-      function allowRender() {
-        document.documentElement.classList.add('pro-ok');
-      }
+  // 2) Simple “unlock flag” stored in the browser (24h)
+  var until = parseInt(localStorage.getItem("pro_unlocked_until") || "0", 10);
+  window.__PRO_FEATURE_ACTIVE__ = until > Date.now();
 
-      function decodePayload(token) {
-        try {
-          var parts = token.split('.');
-          if (parts.length !== 3) return null;
-          var base64 = parts[1].replace(/-/g, '+').replace(/_/g, '/');
-          var padded = base64 + '==='.slice((base64.length + 3) % 4);
-          var json = atob(padded);
-          return JSON.parse(json);
-        } catch (err) {
-          console.warn('Failed to decode token', err);
-          return null;
-        }
-      }
-
-      var storedToken = localStorage.getItem('pro_token');
-      var payload = storedToken ? decodePayload(storedToken) : null;
-
-      var hasValidToken = false;
-      if (storedToken && payload) {
-        var hasFeature = Array.isArray(payload.features) && payload.features.includes('logo_overlay');
-        var isExpired = typeof payload.exp === 'number' && payload.exp * 1000 <= Date.now();
-        if (hasFeature && !isExpired) {
-          hasValidToken = true;
-          window.__PRO_PAYLOAD__ = payload;
-          window.__PRO_TOKEN__ = storedToken;
-        } else if (storedToken) {
-          localStorage.removeItem('pro_token');
-        }
-      }
-
-      window.__PURCHASE_URL__ = PURCHASE_URL;
-      window.__PRO_FEATURE_ACTIVE__ = hasValidToken;
-      allowRender();
-
-      window.addEventListener('storage', function (event) {
-        if (event.key === 'pro_token') {
-          window.__PRO_FEATURE_ACTIVE__ = !!event.newValue;
-          window.location.reload();
-        }
-      });
-    })();
-    </script>
+  // 3) Allow page to render (removes the “hidden until validated” effect)
+  document.documentElement.classList.add("pro-ok");
+})();
+</script>
 
     <div class="container mx-auto p-4 sm:p-6 lg:p-8">
         <div class="max-w-4xl mx-auto bg-white dark:bg-gray-800 p-6 sm:p-8 rounded-xl shadow-lg border border-gray-200 dark:border-gray-700">
@@ -146,18 +110,58 @@
     </div>
 
 <script>
-document.addEventListener('DOMContentLoaded', () => {
+document.addEventListener('DOMContentLoaded', async () => {
     const form = document.getElementById('vcard-form');
     const mainActionBtn = document.getElementById('main-action-btn');
     const downloadBtn = document.getElementById('proFeaturesBtn');
     const logoUploadInput = document.getElementById('logo-upload');
     const qrContainer = document.getElementById('qr-code-container');
     const loadingText = document.getElementById('loading-text');
+    async function consumeTokenFromUrlIfPresent() {
+  const url = new URL(window.location.href);
+  const token = url.searchParams.get('token');
+  if (!token) return false;
 
-    const purchaseUrl = window.__PURCHASE_URL__ || ('https://checkout.dodopayments.com/buy/pdt_ROmfPNXoSRQ16tKgZWURT?quantity=1&redirect_url=' + encodeURIComponent('https://vcardqrcodegenerator.com/thank-you.html'));
-    const proPayload = window.__PRO_PAYLOAD__ || null;
+  if (loadingText) {
+    loadingText.classList.remove('hidden');
+    loadingText.textContent = 'Validating payment...';
+  }
 
-    let featureUnlocked = window.__PRO_FEATURE_ACTIVE__ === true && !!(proPayload && Array.isArray(proPayload.features) && proPayload.features.includes('logo_overlay'));
+  try {
+    const res = await fetch(`${tokenValidatorUrl}?token=${encodeURIComponent(token)}`);
+    const json = await res.json();
+
+    if (json.status === 'success') {
+      // Unlock for 24 hours
+      localStorage.setItem('pro_unlocked_until', String(Date.now() + 24 * 60 * 60 * 1000));
+
+      // Remove token from URL
+      url.searchParams.delete('token');
+      history.replaceState({}, '', url.toString());
+
+      // Reload to show Upload button
+      window.location.reload();
+      return true;
+    } else {
+      if (loadingText) {
+        loadingText.textContent = 'Payment not confirmed yet. Please wait a few seconds and refresh.';
+      }
+      return true; // token was present, we handled the UX
+    }
+  } catch (e) {
+    if (loadingText) loadingText.textContent = 'Could not validate payment. Please refresh.';
+    return true;
+  }
+}
+
+// IMPORTANT: run this before rendering UI state
+const tokenHandled = await consumeTokenFromUrlIfPresent();
+if (tokenHandled) return;
+
+    const checkoutApiUrl = window.__CHECKOUT_API__;
+const tokenValidatorUrl = window.__TOKEN_VALIDATOR__;
+
+let featureUnlocked = window.__PRO_FEATURE_ACTIVE__ === true;
     let logoImage = null;
 
     const qrCode = new QRCodeStyling({
@@ -229,7 +233,7 @@ function trackLogoApplied(sizePct) {
         logoUploadInput.classList.add('hidden');
         if (downloadBtn) {
             downloadBtn.classList.add('hidden');
-            downloadBtn.setAttribute('href', purchaseUrl);
+            downloadBtn.setAttribute('href', '#');
         }
         mainActionBtn.textContent = 'Go Premium to Add Your Logo';
         mainActionBtn.classList.remove('locked');
@@ -237,21 +241,11 @@ function trackLogoApplied(sizePct) {
             loadingText.classList.remove('hidden');
         }
         if (loadingText) {
-            loadingText.textContent = proPayload ? 'Your premium session expired. Reactivate with your license key.' : 'Upgrade to unlock logo overlays';
+            loadingText.textContent = 'Upgrade to unlock logo overlays';
         }
     }
 
-    if (featureUnlocked && proPayload?.exp) {
-        const expiryDelay = proPayload.exp * 1000 - Date.now();
-        if (expiryDelay > 0) {
-            setTimeout(() => {
-                localStorage.removeItem('pro_token');
-                window.location.href = purchaseUrl;
-            }, expiryDelay);
-        }
-    }
-
-    const generateVCardString = () => {
+        const generateVCardString = () => {
         const fullName = document.getElementById('fullName').value.trim();
         const phone = document.getElementById('phone').value.trim().replace(/[^0-9+]/g, '');
         const email = document.getElementById('email').value.trim();
@@ -296,9 +290,31 @@ END:VCARD`;
         logoUploadInput.click();
     };
 
-    const handleCheckout = () => {
-        window.location.href = purchaseUrl;
-    };
+   const handleCheckout = async () => {
+  try {
+    if (loadingText) {
+      loadingText.classList.remove('hidden');
+      loadingText.textContent = 'Redirecting to secure checkout...';
+    }
+
+    const email = document.getElementById('email').value.trim();
+    const name = document.getElementById('fullName').value.trim();
+
+    const res = await fetch(checkoutApiUrl, {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({ email, name }),
+    });
+
+    const data = await res.json();
+    if (!data.checkout_url) throw new Error('No checkout_url returned');
+
+    window.location.href = data.checkout_url;
+  } catch (e) {
+    alert('Could not start checkout. Please try again.');
+    if (loadingText) loadingText.textContent = 'Upgrade to unlock logo overlays';
+  }
+};
     
     logoUploadInput.addEventListener('change', (event) => {
         const file = event.target.files[0];
