--- a/blogs/index.html
+++ b/blogs/index.html
@@ -7,8 +7,12 @@
   <meta name="description" content="Browse the latest articles and guides about vCard QR codes, contactless networking, and digital business cards.">
   <link rel="canonical" href="https://vcardqrcodegenerator.com/blogs/">
   <script src="https://cdn.tailwindcss.com"></script>
+  <!-- Google AdSense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1206702185649949"
+    crossorigin="anonymous"></script>
   <style>
     body { font-family: 'Inter', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif; }
+    .adsbygoogle-container { min-height: 100px; margin: 1.5rem 0; }
   </style>
 </head>
 <body class="bg-slate-950/5 text-slate-900">
@@ -37,6 +41,17 @@
   </header>
 
   <main class="mx-auto max-w-5xl px-6 py-12 sm:py-16">
+    <!-- Ad Unit: Top of Content -->
+    <div class="adsbygoogle-container">
+      <ins class="adsbygoogle"
+        style="display:block"
+        data-ad-client="ca-pub-1206702185649949"
+        data-ad-slot="AUTO"
+        data-ad-format="auto"
+        data-full-width-responsive="true"></ins>
+      <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+    </div>
+
     <div id="status-message" class="mb-6 hidden rounded-lg border border-indigo-100 bg-indigo-50 px-4 py-3 text-sm text-indigo-700" role="status" aria-live="polite" aria-hidden="true"></div>
 
     <section aria-labelledby="latest-heading" class="space-y-6">
@@ -53,6 +68,27 @@
         <p class="text-sm text-slate-500">Browse every tutorial and playbook in our library.</p>
       </div>
       <div id="all-posts" class="grid gap-4 md:grid-cols-2"></div>
+    </section>
+
+    <!-- Ad Unit: End of Content -->
+    <div class="adsbygoogle-container mt-12">
+      <ins class="adsbygoogle"
+        style="display:block"
+        data-ad-client="ca-pub-1206702185649949"
+        data-ad-slot="AUTO"
+        data-ad-format="auto"
+        data-full-width-responsive="true"></ins>
+      <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+    </div>
+
+    <!-- Pro CTA -->
+    <section class="mt-8 p-6 rounded-xl bg-indigo-50 border border-indigo-200">
+      <h2 class="text-xl font-semibold text-indigo-900">Create Your vCard QR Code</h2>
+      <p class="mt-2 text-indigo-800">Generate a professional digital business card in seconds — free and instant.</p>
+      <div class="mt-4 flex flex-wrap gap-3">
+        <a href="/" class="inline-flex items-center justify-center rounded-full bg-indigo-600 px-5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500">Try Free Generator</a>
+        <a href="/logo-qr-code.html" class="inline-flex items-center justify-center rounded-full bg-white px-5 py-2.5 text-sm font-semibold text-indigo-600 border border-indigo-300 hover:bg-indigo-50">Add Your Logo (Pro)</a>
+      </div>
     </section>
   </main>
 
