--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
       <div class="mt-6 flex flex-wrap items-center justify-center gap-2 text-sm text-indigo-100">
         <span class="tracking-[0.3em] text-xs uppercase text-indigo-200">Featured Guide</span>
-        <a href="https://vcardqrcodegenerator.com/blog/qr-code-and-vcard-guide/" class="inline-flex items-center gap-1 font-semibold text-white hover:underline">
+        <a id="guideLink" href="https://vcardqrcodegenerator.com/blog/qr-code-and-vcard-guide/" class="inline-flex items-center gap-1 font-semibold text-white hover:underline">
           Ultimate vCard QR code guide
           <span aria-hidden="true">→</span>
         </a>
